# brightthread

./: .gitignore  CLAUDE.md  README.md  pyrightconfig.json
backend/: .deployments  .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 065a764a481f_add_order_status_history_table.py  1a57152a2fa3_add_order_line_item_table.py  2d06f17cbeee_add_shipping_address_table.py  35552381325b_add_product_table.py  451925ed44b4_add_supplier_table.py  4a4de03b2ed9_add_color_table.py  52bd56d1ae05_create_company_table.py  600e40846231_fix_user_password_hashes.py  8c949102d804_add_artwork_table.py  946a2a66620e_reseed_expanded_orders_data.py  ae54f98fc8a3_add_size_table.py  b11d15f043a1_seed_initial_data.py  b38bf350bfea_add_inventory_table.py  c2a8b9f1e3d5_seed_order_status_history.py  d5e63b3a38b5_add_user_table.py  e4744c7d9a76_merge_heads.py  fc11b32f700c_add_order_table.py
backend/scripts/: build-lambda.sh  seed_data.py  validate_opensearch_access.py  validate_rds_access.py
backend/src/: __init__.py  auth.py  demo.py  dependencies.py  main.py
backend/src/agents/: cx_order_support_agent.py
backend/src/api/: models.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/repositories/: __init__.py  artwork_repository.py  color_repository.py  company_repository.py  (+10 more)
backend/tests/: __init__.py  conftest.py  test_agent_router.py  test_auth.py  test_conversation_service.py  test_conversations_router.py
backend/tests_integration/: README.md  __init__.py  conftest.py  test_api_endpoints.py
(+133 files in other folders)
