[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "BrightThread Order Support Agent Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "loguru>=0.7.3",
    "pydantic>=2.5.0",
    "mangum>=0.17.0",
    "requests>=2.31.0",
    "pytest>=9.0.2",
    "uvicorn>=0.38.0",
    "boto3>=1.35.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.17.2",
    "sqlalchemy>=2.0.45",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "langchain-aws>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-amazon-dynamodb>=0.1.3",
    "uuid6>=2025.0.1",
    "bcrypt>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.0",
    "ruff>=0.1.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
extraPaths = ["src"]

[tool.ruff]
# Ignore E402 in test files (module level import not at top)
# This is required for mocking modules before imports
# Alembic also requires late imports for model discovery
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
"tests_integration/*.py" = ["E402"]
"alembic/*.py" = ["E402"]
